my part is done

--- a/index.html
+++ b/index.html
@@ -28,23 +28,21 @@
         .clickable-area {
             position: absolute;
             
-            top: 25%; /* Position it 30% from the top of the container */
-            left: 87%; /* Position it 30% from the left of the container */
-            width: 9.5%; /* Make it 40% of the container width */
-            height: 5%; /* Make it 40% of the container height */
+            top: 37.5%; /* Position it 30% from the top of the container */
+            left: 75.3%; /* Position it 30% from the left of the container */
+            width: 7.3%; /* Make it 40% of the container width */
+            height: 3%; /* Make it 40% of the container height */
             
             cursor: pointer; /* Changes the cursor to indicate it's clickable */
             background: rgba(255, 0, 0, 0.2); /* Optional: shows the area for demo purposes */
         }
 
         #bottomright{
-            position:fixed;
+            position:absolute;
             right:10px;
             bottom:10px;
             width:150px;
             height:150px;
-            z-index: 100;
-            opacity: 1;
         }
 
         </style>
