--- a/test.html
+++ b/test.html
@@ -8,7 +8,9 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <img src="static/img/logo.webp" alt="Image not found" id="bottomright">
+    <a href="index.html">
+        <img src="static/img/logo.webp" alt="Image not found" id="bottomright">
+    </a>
     <main>
         <h1 align="center">Health Bridge Primary Care</h1>
         <p align="center">
